add: lily base TODO: finish lily

--- a/crates/xsu-cliff/templates/ds_view.html
+++ b/crates/xsu-cliff/templates/ds_view.html
@@ -174,7 +174,8 @@ head %}
     .hljs-attr,
     .hljs-title,
     .hljs-built_in,
-    .hljs-type {
+    .hljs-type,
+    .hljs-number {
         color: rgb(91, 33, 182) !important;
     }
 
@@ -182,7 +183,8 @@ head %}
     .hljs-attr:is(.dark *),
     .hljs-title:is(.dark *),
     .hljs-built_in:is(.dark *),
-    .hljs-type:is(.dark *) {
+    .hljs-type:is(.dark *),
+    .hljs-number:is(.dark *) {
         color: rgb(221, 214, 254) !important;
     }
 
