fix(sparkler): opengraph stuff

--- a/crates/sparkler/templates/base.html
+++ b/crates/sparkler/templates/base.html
@@ -14,10 +14,9 @@
 
         <link rel="icon" href="/static/favicon.svg" />
 
-        <meta name="theme-color" content="#7cdea3" />
+        <meta name="theme-color" content="#b62f5a" />
         <meta property="og:type" content="website" />
         <meta property="og:site_name" content="{{ config.name }}" />
-        <meta name="description" content="{{ config.description }}" />
 
         <link rel="stylesheet" href="/static/style.css" />
 
