--- a/crates/sparkler/templates/profile.html
+++ b/crates/sparkler/templates/profile.html
@@ -194,6 +194,146 @@ block head %}
 
             <!-- feed -->
             <div id="feed" class="flex flex-col gap-2">
+                <!-- pinned -->
+                {% if let Some(pinned) = pinned %}
+                <div
+                    class="card-nest w-full shadow"
+                    id="response:{{ pinned.id }}"
+                    title="Pinned response"
+                >
+                    <div class="card flex flex-col gap-1">
+                        <div class="flex justify-between gap-1 question_title">
+                            <div class="footernav">
+                                <b class="flex items-center gap-2 item">
+                                    <img
+                                        title="{{ pinned.question.author }}'s avatar"
+                                        src="/api/v1/profiles/{{ pinned.question.author }}/avatar"
+                                        alt=""
+                                        class="avatar round-sm"
+                                        style="--size: 20px"
+                                    />
+
+                                    {% if pinned.question.author != "anonymous"
+                                    %}
+                                    <a
+                                        href="/@{{ pinned.question.author }}"
+                                        style="color: inherit"
+                                    >
+                                        {{ pinned.question.author }}
+                                    </a>
+                                    {% else %} {{ pinned.question.author }} {%
+                                    endif %}
+                                </b>
+
+                                <span class="date item">
+                                    {{ pinned.question.timestamp }}
+                                </span>
+
+                                <span class="item">
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        viewBox="0 0 16 16"
+                                        width="16"
+                                        height="16"
+                                        style="color: var(--color-primary)"
+                                        aria-label="Pin symbol"
+                                        class="icon"
+                                    >
+                                        <path
+                                            d="M4.456.734a1.75 1.75 0 0 1 2.826.504l.613 1.327a3.08 3.08 0 0 0 2.084 1.707l2.454.584c1.332.317 1.8 1.972.832 2.94L11.06 10l3.72 3.72a.748.748 0 0 1-.332 1.265.75.75 0 0 1-.729-.205L10 11.06l-2.204 2.205c-.968.968-2.623.5-2.94-.832l-.584-2.454a3.08 3.08 0 0 0-1.707-2.084l-1.327-.613a1.75 1.75 0 0 1-.504-2.826ZM5.92 1.866a.253.253 0 0 0-.183-.142.251.251 0 0 0-.221.07L1.794 5.516a.251.251 0 0 0-.07.221c.015.08.068.149.142.183l1.328.613A4.582 4.582 0 0 1 5.73 9.63l.584 2.454a.251.251 0 0 0 .42.12l5.47-5.47a.25.25 0 0 0-.12-.42L9.63 5.73a4.583 4.583 0 0 1-3.098-2.537Z"
+                                        ></path>
+                                    </svg>
+                                </span>
+                            </div>
+                        </div>
+
+                        <!-- prettier-ignore -->
+                        <span class="question_content">
+                            {{ xsu_util::ui::render_markdown(pinned.question.content)|safe }}
+                        </span>
+                    </div>
+
+                    <div class="card flex flex-col gap-1">
+                        <!-- prettier-ignore -->
+                        <span class="response_content">
+                            {{ xsu_util::ui::render_markdown(pinned.content)|safe }}
+                        </span>
+
+                        <div
+                            class="flex justify-between items-center gap-1 response_title"
+                        >
+                            <div class="footernav">
+                                <b class="flex items-center gap-2 item">
+                                    <img
+                                        title="{{ pinned.author }}'s avatar"
+                                        src="/api/v1/profiles/{{ pinned.author }}/avatar"
+                                        alt=""
+                                        class="avatar round-sm"
+                                        style="--size: 20px"
+                                    />
+
+                                    <a
+                                        href="/@{{ pinned.author }}"
+                                        style="color: inherit"
+                                    >
+                                        {{ pinned.author }}
+                                    </a>
+                                </b>
+
+                                <span class="date item">
+                                    {{ pinned.timestamp }}
+                                </span>
+                            </div>
+
+                            <div class="dropdown">
+                                <button
+                                    onclick="trigger('app:hook.dropdown', [event])"
+                                    exclude="dropdown"
+                                >
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        viewBox="0 0 16 16"
+                                        width="16"
+                                        height="16"
+                                        aria-label="Ellipsis symbol"
+                                        class="icon"
+                                    >
+                                        <path
+                                            d="M8 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM1.5 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm13 0a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
+                                        ></path>
+                                    </svg>
+                                </button>
+
+                                <div class="inner shadow-md" exclude="dropdown">
+                                    {% if let Some(profile) = profile %} {% if
+                                    profile.username == other.username %}
+                                    <!-- actions for the profile owner only -->
+                                    <b class="title">Manage</b>
+                                    <a href="#" onclick="pin_response('')">
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            viewBox="0 0 16 16"
+                                            width="16"
+                                            height="16"
+                                            aria-label="Pin symbol"
+                                            class="icon"
+                                        >
+                                            <path
+                                                d="M4.456.734a1.75 1.75 0 0 1 2.826.504l.613 1.327a3.08 3.08 0 0 0 2.084 1.707l2.454.584c1.332.317 1.8 1.972.832 2.94L11.06 10l3.72 3.72a.748.748 0 0 1-.332 1.265.75.75 0 0 1-.729-.205L10 11.06l-2.204 2.205c-.968.968-2.623.5-2.94-.832l-.584-2.454a3.08 3.08 0 0 0-1.707-2.084l-1.327-.613a1.75 1.75 0 0 1-.504-2.826ZM5.92 1.866a.253.253 0 0 0-.183-.142.251.251 0 0 0-.221.07L1.794 5.516a.251.251 0 0 0-.07.221c.015.08.068.149.142.183l1.328.613A4.582 4.582 0 0 1 5.73 9.63l.584 2.454a.251.251 0 0 0 .42.12l5.47-5.47a.25.25 0 0 0-.12-.42L9.63 5.73a4.583 4.583 0 0 1-3.098-2.537Z"
+                                            ></path>
+                                        </svg>
+                                        Unpin
+                                    </a>
+                                    {% endif %} {% endif %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr />
+                {% endif %}
+
+                <!-- actual feed -->
                 {% for response in responses %}
                 <div
                     class="card-nest w-full shadow"
@@ -291,6 +431,24 @@ block head %}
                                     profile.username == other.username %}
                                     <!-- actions for the profile owner only -->
                                     <b class="title">Manage</b>
+                                    <a
+                                        href="#"
+                                        onclick="pin_response('{{ response.id }}')"
+                                    >
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            viewBox="0 0 16 16"
+                                            width="16"
+                                            height="16"
+                                            aria-label="Pin symbol"
+                                            class="icon"
+                                        >
+                                            <path
+                                                d="M4.456.734a1.75 1.75 0 0 1 2.826.504l.613 1.327a3.08 3.08 0 0 0 2.084 1.707l2.454.584c1.332.317 1.8 1.972.832 2.94L11.06 10l3.72 3.72a.748.748 0 0 1-.332 1.265.75.75 0 0 1-.729-.205L10 11.06l-2.204 2.205c-.968.968-2.623.5-2.94-.832l-.584-2.454a3.08 3.08 0 0 0-1.707-2.084l-1.327-.613a1.75 1.75 0 0 1-.504-2.826ZM5.92 1.866a.253.253 0 0 0-.183-.142.251.251 0 0 0-.221.07L1.794 5.516a.251.251 0 0 0-.07.221c.015.08.068.149.142.183l1.328.613A4.582 4.582 0 0 1 5.73 9.63l.584 2.454a.251.251 0 0 0 .42.12l5.47-5.47a.25.25 0 0 0-.12-.42L9.63 5.73a4.583 4.583 0 0 1-3.098-2.537Z"
+                                            ></path>
+                                        </svg>
+                                        Pin
+                                    </a>
                                     <a
                                         href="#"
                                         onclick="delete_response('{{ response.id }}')"
@@ -468,4 +626,37 @@ block head %}
             });
     }
 </script>
-{% call super() %} {% endblock %}
+
+{% if let Some(profile) = profile %} {% if profile.username == other.username %}
+<script type="application/json" id="metadata">
+    {{ metadata|safe }}
+</script>
+
+<script>
+    let metadata = JSON.parse(document.getElementById("metadata").innerHTML);
+
+    async function save_metadata() {
+        const res = await (
+            await fetch("/api/auth/profile/{{ profile.username }}/metadata", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                },
+                body: JSON.stringify({
+                    metadata,
+                }),
+            })
+        ).json();
+
+        trigger("app:shout", [
+            res.success ? "tip" : "caution",
+            res.message || "Settings saved!",
+        ]);
+    }
+
+    function pin_response(id) {
+        metadata.kv["sparkler:pinned"] = id;
+        save_metadata();
+    }
+</script>
+{% endif %} {% endif %} {% call super() %} {% endblock %}
