--- a/crates/sparkler/templates/profile_settings.html
+++ b/crates/sparkler/templates/profile_settings.html
@@ -20,6 +20,22 @@
     </div>
 
     <div class="flex flex-col gap-1">
+        <label for="sparkler:pinned">Pinned</label>
+
+        <input
+            name="sparkler:pinned"
+            id="sparkler:pinned"
+            onchange="update_kv('sparkler:pinned', event.target.value)"
+        />
+
+        <p class="fade">
+            Put the ID of the response you want to pin there. Note this will
+            also pin the question! You can also do this by clicking "Pin" on any
+            of your responses.
+        </p>
+    </div>
+
+    <div class="flex flex-col gap-1">
         <label for="sparkler:profile_theme">Profile theme</label>
 
         <input
