add(sparkler): split into components add(sparkler): better following/followers

--- a/crates/sparkler/static/style.css
+++ b/crates/sparkler/static/style.css
@@ -38,6 +38,7 @@ body {
         "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     color: var(--color-text);
     background: var(--color-surface);
+    overflow-x: hidden;
 }
 
 #page {
@@ -408,6 +409,7 @@ h6 {
     width: -moz-max-content;
     width: max-content;
     position: relative;
+    max-width: 100%;
 }
 
 h1 {
