fix(sparkler): block dialog

--- a/crates/sparkler/templates/privacy_settings.html
+++ b/crates/sparkler/templates/privacy_settings.html
@@ -96,7 +96,7 @@
             <button class="primary bold" onclick="block()">Confirm</button>
             <button
                 class="bold"
-                onclick="document.getElementById('block_dialog').close()"
+                onclick="document.getElementById('block_dialog').close(); window.close()"
             >
                 Cancel
             </button>
