--- a/crates/sparkler/templates/profile_settings.html
+++ b/crates/sparkler/templates/profile_settings.html
@@ -126,7 +126,10 @@
             onchange="update_kv('sparkler:color_lowered', event.target.value)"
         />
 
-        <p class="fade">Stuff that is darker than the page background.</p>
+        <p class="fade">
+            Stuff that is darker than the page background. (questions,
+            motivational header, buttons, textarea, etc.)
+        </p>
     </div>
 
     <div class="flex flex-col gap-1">
@@ -138,7 +141,7 @@
             onchange="update_kv('sparkler:color_super_lowered', event.target.value)"
         />
 
-        <p class="fade">Even darker than that.</p>
+        <p class="fade">Even darker than that. (button hover, etc.)</p>
     </div>
 
     <div class="flex flex-col gap-1">
@@ -150,7 +153,10 @@
             onchange="update_kv('sparkler:color_raised', event.target.value)"
         />
 
-        <p class="fade">Stuff that is lighter than the page background.</p>
+        <p class="fade">
+            Stuff that is lighter than the page background. (profile card, pill
+            menu button hover, responses, etc.)
+        </p>
     </div>
 
     <div class="flex flex-col gap-1">
@@ -162,7 +168,7 @@
             onchange="update_kv('sparkler:color_super_raised', event.target.value)"
         />
 
-        <p class="fade">Even lighter than that.</p>
+        <p class="fade">Even lighter than that. (pill menu buttons, etc.)</p>
     </div>
 
     <div class="flex flex-col gap-1">
