--- a/crates/sparkler/templates/base.html
+++ b/crates/sparkler/templates/base.html
@@ -83,6 +83,7 @@
             </div>
 
             <div class="flex gap-1">
+                {% if profile.is_some() %}
                 <a
                     class="button"
                     href="/inbox/compose"
@@ -101,6 +102,7 @@
                         ></path>
                     </svg>
                 </a>
+                {% endif %}
 
                 <div class="dropdown">
                     <button
