add(sparkler): anonymous username fix(sparkler): sign up fix(sparkler): anonymous questions

--- a/crates/sparkler/templates/components/response.html
+++ b/crates/sparkler/templates/components/response.html
@@ -19,7 +19,14 @@
                     >
                         {{ response.question.author }}
                     </a>
-                    {% else %} {{ response.question.author }} {% endif %}
+                    {% else %}
+                    <!-- prettier-ignore -->
+                    {% if let Some(username) = anonymous_username %}
+                        {{ username }}
+                    {% else %}
+                        anonymous
+                    {% endif %}
+                    {% endif %}
                 </b>
 
                 <span class="date item">{{ response.question.timestamp }}</span>
