--- a/crates/sparkler/templates/profile_settings.html
+++ b/crates/sparkler/templates/profile_settings.html
@@ -20,6 +20,21 @@
     </div>
 
     <div class="flex flex-col gap-1">
+        <label for="sparkler:anonymous_username">Anonymous username</label>
+
+        <input
+            name="sparkler:anonymous_username"
+            id="sparkler:anonymous_username"
+            onchange="update_kv('sparkler:anonymous_username', event.target.value)"
+        />
+
+        <p class="fade">
+            This name will be shown instead of "anonymous" in the username slot
+            of anonymous questions.
+        </p>
+    </div>
+
+    <div class="flex flex-col gap-1">
         <label for="sparkler:pinned">Pinned</label>
 
         <input
