--- a/crates/sparkler/templates/timeline.html
+++ b/crates/sparkler/templates/timeline.html
@@ -60,6 +60,7 @@ block head %}
             {% let is_pinned = false %}
             {% let show_pin_button = false %}
             {% let do_not_render_question = false %}
+            {% let anonymous_username = Some("anonymous") %}
             {% include "components/response.html" %}
         {% endfor %}
     </main>
