fix(sparkler): global question response notification

--- a/crates/sparkler/templates/global_question.html
+++ b/crates/sparkler/templates/global_question.html
@@ -155,6 +155,8 @@ block head %}
                 document
                     .getElementById(`question:${question}`)
                     .setAttribute("disabled", "fully");
+
+                e.target.reset();
             });
     }
 </script>
