--- a/crates/sparkler/templates/notifications.html
+++ b/crates/sparkler/templates/notifications.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} {% block title %}{{ config.name }}{% endblock %} {%
-block head %}
+{% extends "base.html" %} {% block title %}Notifications - {{ config.name }}{%
+endblock %} {% block head %}
 <meta name="description" content="{{ config.description }}" />
 {% endblock %} {% block nav_left %}
 <a class="button active" href="/">
@@ -49,91 +49,40 @@ block head %}
             d="M8 16a2 2 0 0 0 1.985-1.75c.017-.137-.097-.25-.235-.25h-3.5c-.138 0-.252.113-.235.25A2 2 0 0 0 8 16ZM3 5a5 5 0 0 1 10 0v2.947c0 .05.015.098.042.139l1.703 2.555A1.519 1.519 0 0 1 13.482 13H2.518a1.516 1.516 0 0 1-1.263-2.36l1.703-2.554A.255.255 0 0 0 3 7.947Zm5-3.5A3.5 3.5 0 0 0 4.5 5v2.947c0 .346-.102.683-.294.97l-1.703 2.556a.017.017 0 0 0-.003.01l.001.006c0 .002.002.004.004.006l.006.004.007.001h10.964l.007-.001.006-.004.004-.006.001-.007a.017.017 0 0 0-.003-.01l-1.703-2.554a1.745 1.745 0 0 1-.294-.97V5A3.5 3.5 0 0 0 8 1.5Z"
         ></path>
     </svg>
-    {% if notifs != 0 %}
-    <span class="notification">{{ notifs }}</span>
-    {% endif %}
 </a>
 {% endblock %} {% block content %}
 <article>
-    {% if questions.len() == 0 %}
-    <main>
-        <p>
-            You've seen everything!
-            <em>For now...</em>
-        </p>
-    </main>
-    {% endif %}
-
     <main class="flex flex-col gap-2">
-        <div class="pillmenu">
-            <a href="/inbox">Inbox</a>
-            <a href="/inbox/global" class="active">Global Questions</a>
-        </div>
+        <!-- notifications -->
+        {% for notif in notifs %}
+        <div class="card-nest w-full shadow" id="notif:{{ notif.id }}">
+            <div class="card flex justify-between gap-2">
+                <b class="notif_title">
+                    {{ xsu_util::ui::render_markdown(notif.title)|safe }}
+                </b>
+                <span class="notif_timestamp date">{{ notif.timestamp }}</span>
+            </div>
 
-        <!-- compose -->
-        <div class="card-nest w-full shadow">
-            <!-- prettier-ignore -->
-            <div class="card">
-                    Ask a global question
+            <div class="card flex flex-col gap-2">
+                <!-- prettier-ignore-->
+                <div class="notif_content">{{ xsu_util::ui::render_markdown(notif.content)|safe }}</div>
+
+                <!-- actions -->
+                <div class="flex gap-2">
+                    <a class="button primary bold" href="{{ notif.address }}">
+                        Open
+                    </a>
+
+                    <button
+                        class="button bold"
+                        onclick="trigger('notifications:delete', ['{{ notif.id }}'])"
+                    >
+                        Mark as Read
+                    </button>
                 </div>
-
-            <div class="card">
-                <form id="question_form" class="flex flex-col gap-2">
-                    <textarea
-                        class="w-full"
-                        placeholder="Type your question!"
-                        minlength="1"
-                        maxlength="250"
-                        required
-                        name="content"
-                        id="content"
-                    ></textarea>
-
-                    <div class="flex justify-between w-full gap-1">
-                        <div></div>
-                        <button class="round-lg primary bold">Ask</button>
-                    </div>
-                </form>
             </div>
         </div>
-        <hr />
-
-        <!-- feed -->
-        <p>
-            Global questions from people you follow (and yourself) will show up
-            here!
-        </p>
-
-        <!-- prettier-ignore -->
-        {% for question in questions %}
-            {% include "components/global_question.html" %}
         {% endfor %}
     </main>
 </article>
-
-<script>
-    document.getElementById("question_form").addEventListener("submit", (e) => {
-        e.preventDefault();
-        fetch("/api/v1/questions", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json",
-            },
-            body: JSON.stringify({
-                recipient: "@",
-                content: e.target.content.value,
-                anonymous: false,
-            }),
-        })
-            .then((res) => res.json())
-            .then((res) => {
-                trigger("app:shout", [
-                    res.success ? "tip" : "caution",
-                    res.message || "Question asked!",
-                ]);
-
-                e.target.reset();
-            });
-    });
-</script>
 {% call super() %} {% endblock %}
