--- a/crates/sparkler/templates/following.html
+++ b/crates/sparkler/templates/following.html
@@ -16,7 +16,7 @@
 
 <a href="/@{{ other.username }}/following" class="active">
     Following
-    <b class="notification">{{ following.len() }}</b>
+    <b class="notification">{{ following_count }}</b>
 </a>
 {% endblock %} {% block panel %}
 <!-- followers -->
@@ -55,5 +55,18 @@
         </div>
     </div>
     {% endfor %}
+
+    <!-- pagination buttons -->
+    {% if following_count != 0 %}
+    <div class="flex justify-between gap-2 w-full">
+        {% if page > 0 %}
+        <a class="button secondary" href="?page={{ page - 1 }}">Previous</a>
+        {% else %}
+        <div></div>
+        {% endif %} {% if following.len() != 0 %}
+        <a class="button secondary" href="?page={{ page + 1 }}">Next</a>
+        {% endif %}
+    </div>
+    {% endif %}
 </div>
 {% call super() %} {% endblock %}
