--- a/crates/sparkler/templates/profile_questions.html
+++ b/crates/sparkler/templates/profile_questions.html
@@ -6,7 +6,7 @@
 
 <a href="/@{{ other.username }}/questions" class="active">
     Questions
-    <b class="notification">{{ questions.len() }}</b>
+    <b class="notification">{{ questions_count }}</b>
 </a>
 
 <a href="/@{{ other.username }}/followers">
@@ -25,5 +25,18 @@
     {% for question in questions %}
         {% include "components/global_question.html" %}
     {% endfor %}
+
+    <!-- pagination buttons -->
+    {% if questions_count != 0 %}
+    <div class="flex justify-between gap-2 w-full">
+        {% if page > 0 %}
+        <a class="button secondary" href="?page={{ page - 1 }}">Previous</a>
+        {% else %}
+        <div></div>
+        {% endif %} {% if questions.len() != 0 %}
+        <a class="button secondary" href="?page={{ page + 1 }}">Next</a>
+        {% endif %}
+    </div>
+    {% endif %}
 </div>
 {% call super() %} {% endblock %}
